logs/django-gallery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_gallery-0.1.egg-info'...
Listing './lib/python3.5/site-packages/gallery'...
Listing './lib/python3.5/site-packages/gallery/locale'...
Listing './lib/python3.5/site-packages/gallery/locale/fr'...
Listing './lib/python3.5/site-packages/gallery/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/gallery/management'...
Listing './lib/python3.5/site-packages/gallery/management/commands'...
Compiling './lib/python3.5/site-packages/gallery/models.py'...
***   File "./lib/python3.5/site-packages/gallery/models.py", line 26
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gallery/static'...
Listing './lib/python3.5/site-packages/gallery/static/css'...
Listing './lib/python3.5/site-packages/gallery/templates'...
Listing './lib/python3.5/site-packages/gallery/templates/admin'...
Listing './lib/python3.5/site-packages/gallery/templates/admin/gallery'...
Listing './lib/python3.5/site-packages/gallery/templates/gallery'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
